# rust

./: package.json  pnpm-lock.yaml
.husky/: pre-commit
backend/actix/: Cargo.toml
backend/actix/src/: main.rs
backend/gotham/: Cargo.toml
backend/hyper/: Cargo.toml
backend/rocket/: Cargo.toml
backend/warp/: Cargo.toml
backend/warp/src/: main.rs
docs/: README.md
templates/backend/actix/: Cargo.toml
templates/backend/gotham/: Cargo.toml
templates/backend/hyper/: Cargo.toml
templates/backend/rocket/: Cargo.toml
templates/backend/warp/: Cargo.toml
templates/cli/argh-cli/: Cargo.toml  README.md
templates/cli/argh-cli/src/: main.rs
templates/cli/clap-cli/: Cargo.toml
templates/cli/clap-cli/src/: main.rs
