[package]
name = "back-end-hyper"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
hyper = { version = "=1.5.2", features = ["full"] }
tokio = { version = "=1.43.0", features = ["full"] }
http-body-util = "=0.1.2"
hyper-util = { version = "=0.1.10", features = ["full"] }
bytes = "=1.9.0"
